Fix menu background overflow

--- a/idea/frontend/src/widgets/menu/ui/Menu.module.scss
+++ b/idea/frontend/src/widgets/menu/ui/Menu.module.scss
@@ -23,13 +23,14 @@
   }
 }
 
-.menuContent {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  padding-top: toRem(28);
+.gradient {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
+  z-index: -1;
+  overflow: hidden;
 
   &::after,
   &::before {
@@ -65,6 +66,15 @@
       left: toRem(123);
     }
   }
+}
+
+.menuContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  padding-top: toRem(28);
+  height: 100%;
 }
 
 .menuBtn {
